[gd_scene load_steps=4 format=3 uid="uid://bu8fs3r5if701"]

[ext_resource type="Script" uid="uid://chr0hv2dmtqlb" path="res://tank.gd" id="1_6lwfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x24lp"]
custom_solver_bias = 0.1
size = Vector2(60, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lwfj"]
size = Vector2(10, 50)

[node name="Tank" type="CharacterBody2D"]
script = ExtResource("1_6lwfj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x24lp")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="RayCastCenter" type="RayCast2D" parent="."]
position = Vector2(0, 9)
target_position = Vector2(0, 30)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(30, 9)
target_position = Vector2(0, 30)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-30, 9)
target_position = Vector2(0, 30)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="turret_shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -30)
shape = SubResource("RectangleShape2D_6lwfj")
